apps/meeting-tools/production/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: meeting-tools
spec:
  entryPoints:
    - web # TODO: switch this to websecure when appropriate
  routes:
    - kind: Rule
      match: Host(`meeting_tools.marquescg.com`) | Host(`www.meeting_tools.marquescg.com`)
      priority: 10
      services:
        - name: prod-frontend-service
          port: 3000
    - kind: Rule
      match: Host(`meeting_tools.marquescg.com/api`)
      priority: 10
      services:
        - name: prod-backend-service
          port: 8000
